--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ html
 }
 
 body {
-    font-family: Poppins;
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
     width: 100%;
     background-image: url("https://img.freepik.com/free-vector/seamless-pattern_1159-5086.jpg?t=st=1648995032~exp=1648995632~hmac=8359f196df0e6827af9726cf6a03af670e807a81453ec24d8452c904755997d6&w=740");
